tests/baselines/reference/optionalParamTypeComparison.errors.txt
tests/cases/compiler/optionalParamTypeComparison.ts(4,1): error TS2322: Type '(s: 文字, b?: 真假) => 无值' is not assignable to type '(s: 文字, n?: 数字) => 无值'.
  Types of parameters 'b' and 'n' are incompatible.
    Type '数字' is not assignable to type '真假'.
tests/cases/compiler/optionalParamTypeComparison.ts(5,1): error TS2322: Type '(s: 文字, n?: 数字) => 无值' is not assignable to type '(s: 文字, b?: 真假) => 无值'.
  Types of parameters 'n' and 'b' are incompatible.
    Type '真假' is not assignable to type '数字'.


==== tests/cases/compiler/optionalParamTypeComparison.ts (2 errors) ====
    var f: (s: string, n?: number) => void;
    var g: (s: string, b?: boolean) => void;
    
    f = g;
    ~
!!! error TS2322: Type '(s: 文字, b?: 真假) => 无值' is not assignable to type '(s: 文字, n?: 数字) => 无值'.
!!! error TS2322:   Types of parameters 'b' and 'n' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '真假'.
    g = f;
    ~
!!! error TS2322: Type '(s: 文字, n?: 数字) => 无值' is not assignable to type '(s: 文字, b?: 真假) => 无值'.
!!! error TS2322:   Types of parameters 'n' and 'b' are incompatible.
!!! error TS2322:     Type '真假' is not assignable to type '数字'.